# libdecnumber

./: .gitignore  CMakeLists.txt  GNUmakefile  README.md  config.status
.copr/: Makefile
deb/: Makefile  changelog  control  copyright  rules
include/libdecnumber/: dconfig.h  decContext.h  decDPD.h  decDouble.h  decExcept.h  decNumber.h  decNumberLocal.h  decPacked.h  decQuad.h  decRound.h  decSingle.h  gstdint.h
include/libdecnumber/bid/: decimal128.h  decimal128Local.h  decimal128Symbols.h  decimal32.h  decimal32Symbols.h  decimal64.h  decimal64Symbols.h
include/libdecnumber/dpd/: decimal128.h  decimal32.h  decimal64.h
rpm/: libdecnumber.spec
src/: decContext.c  decNumber.c
src/bid/: bid2dpd_dpd2bid.c  decimal128.c  decimal32.c  decimal64.c  host-ieee128.c  host-ieee32.c  host-ieee64.c
src/dpd/: decimal128.c  decimal32.c  decimal64.c
