cmake_minimum_required (VERSION 3.9.0)
project (libdecnumber)
include_directories (src include)
if (CMAKE_SYSTEM_NAME STREQUAL "Windows")
if ($<CONFIG:Release>)
add_compile_options (/arch:AVX2 /GL)
else ()
add_compile_options (/arch:AVX2)
endif ()
else ()
add_compile_options (-Wall -Werror -Wno-stringop-overread -O3 -ggdb -fno-omit-frame-pointer)
endif ()
add_library (decnumber STATIC  src/decNumber.c  src/decContext.c                    src/bid/decimal32.c  src/bid/decimal64.c  src/bid/decimal128.c  src/bid/bid2dpd_dpd2bid.c  src/bid/host-ieee32.c  src/bid/host-ieee64.c  src/bid/host-ieee128.c)
