cmake_minimum_required (VERSION 3.9.0)
project (libdecnumber)
include_directories (src include)
if (CMAKE_SYSTEM_NAME STREQUAL "Windows")
if ($<CONFIG:Release>)
add_compile_options (/arch:AVX2 /GL)
else ()
add_compile_options (/arch:AVX2)
endif ()
else ()
add_compile_options (-Wall -Werror -Wno-maybe-uninitialized -Wno-unused-but-set-variable -O2 -flto=auto -ffat-lto-objects -fexceptions -g -grecord-gcc-switches -pipe -Wall -Wno-complain-wrong-lang -Werror=format-security -Wp,-U_FORTIFY_SOURCE,-D_FORTIFY_SOURCE=3 -Wp,-D_GLIBCXX_ASSERTIONS -specs=/usr/lib/rpm/redhat/redhat-hardened-cc1 -fstack-protector-strong -specs=/usr/lib/rpm/redhat/redhat-annobin-cc1  -m64 -march=x86-64 -mtune=generic -fasynchronous-unwind-tables -fstack-clash-protection -fcf-protection -mtls-dialect=gnu2 -fno-omit-frame-pointer -mno-omit-leaf-frame-pointer -ggdb -O3 -fno-omit-frame-pointer)
endif ()
add_library (decnumber STATIC  src/decNumber.c  src/decContext.c                    src/bid/decimal32.c  src/bid/decimal64.c  src/bid/decimal128.c  src/bid/bid2dpd_dpd2bid.c  src/bid/host-ieee32.c  src/bid/host-ieee64.c  src/bid/host-ieee128.c)
